--- a/render.yaml
+++ b/render.yaml
@@ -3,14 +3,14 @@ services:
     name: task-manager
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: python init_db.py && uvicorn main:app --host 0.0.0.0 --port $PORT
+    startCommand: python init_db.py && python -c "from reminders import start_scheduler; start_scheduler()" & uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: DATABASE_URL
         fromDatabase:
           name: task-manager-db
           property: connectionString
       - key: TELEGRAM_BOT_TOKEN
-        value: 7822793225:AAFug__PTGhCEmMkPBii0I75KbsNHBuGXd8
+        sync: false
 databases:
   - name: task-manager-db
     databaseName: task_manager
